--- a/common-remote-pool/src/main/webapp/css/style.css
+++ b/common-remote-pool/src/main/webapp/css/style.css
@@ -2,7 +2,9 @@ a:hover {
 	background-color: 3399FF;
 }
 
-body { font-family: Verdana, Arial, Sans-serif; }
+body {
+	font-family: Verdana, Arial, Sans-serif;
+}
 
 button {
 	background-color: #3399FF;
@@ -68,4 +70,10 @@ hr {
 button:active {
 	-webkit-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
 	box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
+}
+
+input[type='text'] {
+	background-color:aquamarine;
+	font-size: 13px;
+	line-height: 20px;
 }
