--- a/common-remote-pool/src/main/webapp/css/style.css
+++ b/common-remote-pool/src/main/webapp/css/style.css
@@ -7,34 +7,12 @@ body {
 }
 
 button {
-	background-color: #3399FF;
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3399FF),
-		color-stop(50%, #dddddd), color-stop(50%, #d2d2d2),
-		color-stop(100%, #dfdfdf) );
-	background-image: -webkit-linear-gradient(top, #3399FF 0%, #dddddd 50%, #d2d2d2 50%,
-		#dfdfdf 100%);
-	background-image: -moz-linear-gradient(top, #3399FF 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf
-		100%);
-	background-image: -ms-linear-gradient(top, #3399FF 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf
-		100%);
-	background-image: -o-linear-gradient(top, #3399FF 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf
-		100%);
-	background-image: linear-gradient(top, #3399FF 0%, #dddddd 50%, #d2d2d2 50%, #dfdfdf 100%);
-	border-right: 1px solid #dfdfdf;
-	border-bottom: 1px solid #b4b4b4;
-	border-right: 1px solid #dfdfdf;
-	border-radius: 6px;
-	-webkit-box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px
-		1px #efefef;
-	box-shadow: inset 0 1px 0 0 white, 0 1px 0 0 #d5d5d5, 0 -1px 2px 1px
-		#efefef;
-	color: #666;
-	font: bold 16px/1 "helvetica neue", helvetica, arial, sans-serif;
-	margin: 0;
-	padding: 4px 0;
-	text-shadow: 0 1px 1px #fff;
+	color: #fff;
+	border-color: #ee330a;
+	background-color: #ee330a;
 	width: 58px;
 }
+
 
 button:hover {
 	background-color: #e5e5e5;
@@ -73,7 +51,7 @@ button:active {
 }
 
 input[type='text'] {
-	background-color:aquamarine;
+	background-color: aquamarine;
 	font-size: 13px;
 	line-height: 20px;
 }
