--- a/common-remote-pool/src/main/webapp/css/style.css
+++ b/common-remote-pool/src/main/webapp/css/style.css
@@ -15,19 +15,19 @@ button {
 
 
 button:hover {
-	background-color: #e5e5e5;
+	background-color: #f47920;
 	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #e5e5e5),
 		color-stop(50%, #d1d1d1), color-stop(50%, #c4c4c4),
 		color-stop(100%, #b8b8b8) );
-	background-image: -webkit-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%,
+	background-image: -webkit-linear-gradient(top, #f47920 0%, #d1d1d1 50%, #c4c4c4 50%,
 		#b8b8b8 100%);
-	background-image: -moz-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
+	background-image: -moz-linear-gradient(top, #f47920 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
 		100%);
-	background-image: -ms-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
+	background-image: -ms-linear-gradient(top, #f47920 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
 		100%);
-	background-image: -o-linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
+	background-image: -o-linear-gradient(top, #f47920 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8
 		100%);
-	background-image: linear-gradient(top, #e5e5e5 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
+	background-image: linear-gradient(top, #f47920 0%, #d1d1d1 50%, #c4c4c4 50%, #b8b8b8 100%);
 	-webkit-box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px
 		2px 1px #e3e3e3;
 	box-shadow: inset 0 1px 0 0 #f2f2f2, 0 1px 0 0 #c9c9c9, 0 -1px 2px 1px
@@ -46,12 +46,12 @@ hr {
 }
 
 button:active {
-	-webkit-box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
-	box-shadow: inset 0 0 30px 0 #999999, 0 1px 0 0 white;
+	-webkit-box-shadow: inset 0 0 30px 0 #f47920, 0 1px 0 0 white;
+	box-shadow: inset 0 0 30px 0 #f47920, 0 1px 0 0 white;
 }
 
 input[type='text'] {
 
-border-color: #ffffff #ffffff #ffffff #ffffff;
+border-color: #f47920 #f47920 #f47920 #f47920;
 
 }
